--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "useTabs": false,
+  "singleQuote": true,
+  "semi": false,
+  "printWidth": 100
 }
