--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "vite dev",
-    "deploy": "vite build && wrangler deploy",
+    "dev": "vite dev",
+    "ship": "vite build && wrangler deploy",
     "test": "vitest",
     "types": "wrangler types",
-    "format": "prettier --write .",
-    "check": "prettier . --check && biome lint && tsc"
+    "check": "tsc"
   },
   "keywords": [
     "cloudflare",
@@ -20,16 +19,13 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
     "@cloudflare/vite-plugin": "0.1.13",
     "@cloudflare/vitest-pool-workers": "^0.8.2",
-    "@cloudflare/workers-types": "^4.20250320.0",
     "@tailwindcss/vite": "^4.0.14",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
@@ -37,7 +33,6 @@
     "wrangler": "^4.3.0"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.2.7",
     "@ai-sdk/react": "^1.1.25",
     "@ai-sdk/ui-utils": "^1.1.21",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -51,6 +46,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
+    "workers-ai-provider": "^0.2.0",
     "zod": "^3.24.2"
   }
 }
