--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "dev": "vite dev",
     "ship": "vite build && wrangler deploy",
-    "test": "vitest",
     "types": "wrangler types",
     "check": "tsc"
   },
@@ -19,18 +18,17 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@cloudflare/vite-plugin": "0.1.13",
-    "@cloudflare/vitest-pool-workers": "^0.8.2",
-    "@tailwindcss/vite": "^4.0.14",
+    "@cloudflare/vite-plugin": "1.0.0",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "^4.1.3",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
-    "vitest": "3.0.9",
-    "wrangler": "^4.3.0"
+    "vitest": "3.1.1",
+    "wrangler": "^4.7.2"
   },
   "dependencies": {
     "@ai-sdk/react": "^1.1.25",
@@ -38,8 +36,8 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
-    "agents": "^0.0.40",
-    "ai": "^4.1.64",
+    "agents": "^0.0.51",
+    "ai": "^4.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
@@ -48,5 +46,10 @@
     "tailwind-merge": "^3.0.2",
     "workers-ai-provider": "^0.2.0",
     "zod": "^3.24.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "workerd": "1.20250404.0"
+    }
   }
 }
